WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130864
Fix crash when RenderView is cleared inside of frame flattening layout
https://bugs.webkit.org/show_bug.cgi?id=130864
Summary
Fix crash when RenderView is cleared inside of frame flattening layout
Simon Fraser (smfr)
Reported
2014-03-27 14:58:28 PDT
Fix crash when RenderView is cleared inside of frame lattening layout
Attachments
Patch
(1.73 KB, patch)
2014-03-27 15:00 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-03-27 15:00:47 PDT
Created
attachment 227988
[details]
Patch
mitz
Comment 2
2014-03-27 15:06:37 PDT
Comment on
attachment 227988
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=227988&action=review
> Source/WebCore/ChangeLog:3 > + Fix crash when RenderView is cleared inside of frame lattening layout
typo: lattening
Simon Fraser (smfr)
Comment 3
2014-03-27 15:28:39 PDT
https://trac.webkit.org/r166372
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug