Fix crash when RenderView is cleared inside of frame flattening layout https://bugs.webkit.org/show_bug.cgi?id=130864

Reviewed by Dan Bernstein.

Navigating on http://wallstcheatsheet.com pages on iOS in WebKit1 would
sometimes crash when, inside the inChildFrameLayoutWithFrameFlattening clause,
our frame's RenderView would be null after doing a layout from the root frame,
possibly also when WebCore was being re-entered from another thread.

Add a null check to fix this.

Crash was timing-dependent and hard to test.

* page/FrameView.cpp:
(WebCore::FrameView::layout):

Canonical link: https://commits.webkit.org/148888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166372 268f45cc-cd09-0410-ab3c-d52691b4dbfc